lab1/syntax.output
Grammar

    0 $accept: Program $end

    1 Program: ExtDefList

    2 ExtDefList: ExtDef ExtDefList
    3           | /* empty */

    4 ExtDef: Specifier ExtDecList SEMI
    5       | Specifier SEMI
    6       | Specifier FunDec CompSt
    7       | error SEMI

    8 ExtDecList: VarDec
    9           | VarDec COMMA ExtDecList

   10 Specifier: TYPE
   11          | StructSpecifier

   12 StructSpecifier: STRUCT OptTag LC DefList RC
   13                | STRUCT Tag

   14 OptTag: ID
   15       | /* empty */

   16 Tag: ID

   17 VarDec: ID
   18       | VarDec LB INT RB
   19       | VarDec LB error SEMI

   20 FunDec: ID LP VarList RP
   21       | ID LP RP
   22       | error RP

   23 VarList: ParamDec COMMA VarList
   24        | ParamDec

   25 ParamDec: Specifier VarDec

   26 CompSt: LC DefList StmtList RC
   27       | LC DefList error RC

   28 StmtList: Stmt StmtList
   29         | /* empty */

   30 Stmt: Exp SEMI
   31     | CompSt
   32     | RETURN Exp SEMI
   33     | IF LP Exp RP Stmt
   34     | IF LP Exp RP Stmt ELSE Stmt
   35     | IF LP Exp RP error ELSE Stmt
   36     | WHILE LP Exp RP Stmt
   37     | Exp LB error SEMI
   38     | IF LP error SEMI
   39     | LP Exp error SEMI
   40     | ID LP error SEMI
   41     | error SEMI

   42 DefList: Def DefList
   43        | /* empty */

   44 Def: Specifier DecList SEMI
   45    | Specifier error SEMI

   46 DecList: Dec
   47        | Dec COMMA DecList

   48 Dec: VarDec
   49    | VarDec ASSIGNOP Exp

   50 Exp: Exp ASSIGNOP Exp
   51    | Exp AND Exp
   52    | Exp OR Exp
   53    | Exp RELOP Exp
   54    | Exp PLUS Exp
   55    | Exp MINUS Exp
   56    | Exp STAR Exp
   57    | Exp DIV Exp
   58    | LP Exp RP
   59    | MINUS Exp
   60    | NOT Exp
   61    | ID LP Args RP
   62    | ID LP RP
   63    | Exp LB Exp RB
   64    | Exp DOT ID
   65    | ID
   66    | INT
   67    | FLOAT

   68 Args: Exp COMMA Args
   69     | Exp


Terminals, with rules where they appear

$end (0) 0
error (256) 7 19 22 27 35 37 38 39 40 41 45
INT (258) 18 66
FLOAT (259) 67
ID (260) 14 16 17 20 21 40 61 62 64 65
SEMI (261) 4 5 7 19 30 32 37 38 39 40 41 44 45
COMMA (262) 9 23 47 68
ASSIGNOP (263) 49 50
RELOP (264) 53
PLUS (265) 54
MINUS (266) 55 59
STAR (267) 56
DIV (268) 57
AND (269) 51
OR (270) 52
DOT (271) 64
NOT (272) 60
TYPE (273) 10
LP (274) 20 21 33 34 35 36 38 39 40 58 61 62
RP (275) 20 21 22 33 34 35 36 58 61 62
LB (276) 18 19 37 63
RB (277) 18 63
LC (278) 12 26 27
RC (279) 12 26 27
STRUCT (280) 12 13
RETURN (281) 32
IF (282) 33 34 35 38
ELSE (283) 34 35
WHILE (284) 36
LOWER_THAN_ELSE (285)


Nonterminals, with rules where they appear

$accept (31)
    on left: 0
Program (32)
    on left: 1, on right: 0
ExtDefList (33)
    on left: 2 3, on right: 1 2
ExtDef (34)
    on left: 4 5 6 7, on right: 2
ExtDecList (35)
    on left: 8 9, on right: 4 9
Specifier (36)
    on left: 10 11, on right: 4 5 6 25 44 45
StructSpecifier (37)
    on left: 12 13, on right: 11
OptTag (38)
    on left: 14 15, on right: 12
Tag (39)
    on left: 16, on right: 13
VarDec (40)
    on left: 17 18 19, on right: 8 9 18 19 25 48 49
FunDec (41)
    on left: 20 21 22, on right: 6
VarList (42)
    on left: 23 24, on right: 20 23
ParamDec (43)
    on left: 25, on right: 23 24
CompSt (44)
    on left: 26 27, on right: 6 31
StmtList (45)
    on left: 28 29, on right: 26 28
Stmt (46)
    on left: 30 31 32 33 34 35 36 37 38 39 40 41, on right: 28 33 34
    35 36
DefList (47)
    on left: 42 43, on right: 12 26 27 42
Def (48)
    on left: 44 45, on right: 42
DecList (49)
    on left: 46 47, on right: 44 47
Dec (50)
    on left: 48 49, on right: 46 47
Exp (51)
    on left: 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67,
    on right: 30 32 33 34 35 36 37 39 49 50 51 52 53 54 55 56 57 58
    59 60 63 64 68 69
Args (52)
    on left: 68 69, on right: 61 68


state 0

    0 $accept: . Program $end

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end  reduce using rule 3 (ExtDefList)

    Program          go to state 4
    ExtDefList       go to state 5
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


state 1

    7 ExtDef: error . SEMI

    SEMI  shift, and go to state 9


state 2

   10 Specifier: TYPE .

    $default  reduce using rule 10 (Specifier)


state 3

   12 StructSpecifier: STRUCT . OptTag LC DefList RC
   13                | STRUCT . Tag

    ID  shift, and go to state 10

    $default  reduce using rule 15 (OptTag)

    OptTag  go to state 11
    Tag     go to state 12


state 4

    0 $accept: Program . $end

    $end  shift, and go to state 13


state 5

    1 Program: ExtDefList .

    $default  reduce using rule 1 (Program)


state 6

    2 ExtDefList: ExtDef . ExtDefList

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end  reduce using rule 3 (ExtDefList)

    ExtDefList       go to state 14
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


state 7

    4 ExtDef: Specifier . ExtDecList SEMI
    5       | Specifier . SEMI
    6       | Specifier . FunDec CompSt

    error  shift, and go to state 15
    ID     shift, and go to state 16
    SEMI   shift, and go to state 17

    ExtDecList  go to state 18
    VarDec      go to state 19
    FunDec      go to state 20


state 8

   11 Specifier: StructSpecifier .

    $default  reduce using rule 11 (Specifier)


state 9

    7 ExtDef: error SEMI .

    $default  reduce using rule 7 (ExtDef)


state 10

   14 OptTag: ID .
   16 Tag: ID .

    LC        reduce using rule 14 (OptTag)
    $default  reduce using rule 16 (Tag)


state 11

   12 StructSpecifier: STRUCT OptTag . LC DefList RC

    LC  shift, and go to state 21


state 12

   13 StructSpecifier: STRUCT Tag .

    $default  reduce using rule 13 (StructSpecifier)


state 13

    0 $accept: Program $end .

    $default  accept


state 14

    2 ExtDefList: ExtDef ExtDefList .

    $default  reduce using rule 2 (ExtDefList)


state 15

   22 FunDec: error . RP

    RP  shift, and go to state 22


state 16

   17 VarDec: ID .
   20 FunDec: ID . LP VarList RP
   21       | ID . LP RP

    LP  shift, and go to state 23

    $default  reduce using rule 17 (VarDec)


state 17

    5 ExtDef: Specifier SEMI .

    $default  reduce using rule 5 (ExtDef)


state 18

    4 ExtDef: Specifier ExtDecList . SEMI

    SEMI  shift, and go to state 24


state 19

    8 ExtDecList: VarDec .
    9           | VarDec . COMMA ExtDecList
   18 VarDec: VarDec . LB INT RB
   19       | VarDec . LB error SEMI

    COMMA  shift, and go to state 25
    LB     shift, and go to state 26

    $default  reduce using rule 8 (ExtDecList)


state 20

    6 ExtDef: Specifier FunDec . CompSt

    LC  shift, and go to state 27

    CompSt  go to state 28


state 21

   12 StructSpecifier: STRUCT OptTag LC . DefList RC

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $default  reduce using rule 43 (DefList)

    Specifier        go to state 29
    StructSpecifier  go to state 8
    DefList          go to state 30
    Def              go to state 31


state 22

   22 FunDec: error RP .

    $default  reduce using rule 22 (FunDec)


state 23

   20 FunDec: ID LP . VarList RP
   21       | ID LP . RP

    TYPE    shift, and go to state 2
    RP      shift, and go to state 32
    STRUCT  shift, and go to state 3

    Specifier        go to state 33
    StructSpecifier  go to state 8
    VarList          go to state 34
    ParamDec         go to state 35


state 24

    4 ExtDef: Specifier ExtDecList SEMI .

    $default  reduce using rule 4 (ExtDef)


state 25

    9 ExtDecList: VarDec COMMA . ExtDecList

    ID  shift, and go to state 36

    ExtDecList  go to state 37
    VarDec      go to state 19


state 26

   18 VarDec: VarDec LB . INT RB
   19       | VarDec LB . error SEMI

    error  shift, and go to state 38
    INT    shift, and go to state 39


state 27

   26 CompSt: LC . DefList StmtList RC
   27       | LC . DefList error RC

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $default  reduce using rule 43 (DefList)

    Specifier        go to state 29
    StructSpecifier  go to state 8
    DefList          go to state 40
    Def              go to state 31


state 28

    6 ExtDef: Specifier FunDec CompSt .

    $default  reduce using rule 6 (ExtDef)


state 29

   44 Def: Specifier . DecList SEMI
   45    | Specifier . error SEMI

    error  shift, and go to state 41
    ID     shift, and go to state 36

    VarDec   go to state 42
    DecList  go to state 43
    Dec      go to state 44


state 30

   12 StructSpecifier: STRUCT OptTag LC DefList . RC

    RC  shift, and go to state 45


state 31

   42 DefList: Def . DefList

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $default  reduce using rule 43 (DefList)

    Specifier        go to state 29
    StructSpecifier  go to state 8
    DefList          go to state 46
    Def              go to state 31


state 32

   21 FunDec: ID LP RP .

    $default  reduce using rule 21 (FunDec)


state 33

   25 ParamDec: Specifier . VarDec

    ID  shift, and go to state 36

    VarDec  go to state 47


state 34

   20 FunDec: ID LP VarList . RP

    RP  shift, and go to state 48


state 35

   23 VarList: ParamDec . COMMA VarList
   24        | ParamDec .

    COMMA  shift, and go to state 49

    $default  reduce using rule 24 (VarList)


state 36

   17 VarDec: ID .

    $default  reduce using rule 17 (VarDec)


state 37

    9 ExtDecList: VarDec COMMA ExtDecList .

    $default  reduce using rule 9 (ExtDecList)


state 38

   19 VarDec: VarDec LB error . SEMI

    SEMI  shift, and go to state 50


state 39

   18 VarDec: VarDec LB INT . RB

    RB  shift, and go to state 51


state 40

   26 CompSt: LC DefList . StmtList RC
   27       | LC DefList . error RC

    error   shift, and go to state 52
    INT     shift, and go to state 53
    FLOAT   shift, and go to state 54
    ID      shift, and go to state 55
    MINUS   shift, and go to state 56
    NOT     shift, and go to state 57
    LP      shift, and go to state 58
    LC      shift, and go to state 27
    RETURN  shift, and go to state 59
    IF      shift, and go to state 60
    WHILE   shift, and go to state 61

    RC  reduce using rule 29 (StmtList)

    CompSt    go to state 62
    StmtList  go to state 63
    Stmt      go to state 64
    Exp       go to state 65


state 41

   45 Def: Specifier error . SEMI

    SEMI  shift, and go to state 66


state 42

   18 VarDec: VarDec . LB INT RB
   19       | VarDec . LB error SEMI
   48 Dec: VarDec .
   49    | VarDec . ASSIGNOP Exp

    ASSIGNOP  shift, and go to state 67
    LB        shift, and go to state 26

    $default  reduce using rule 48 (Dec)


state 43

   44 Def: Specifier DecList . SEMI

    SEMI  shift, and go to state 68


state 44

   46 DecList: Dec .
   47        | Dec . COMMA DecList

    COMMA  shift, and go to state 69

    $default  reduce using rule 46 (DecList)


state 45

   12 StructSpecifier: STRUCT OptTag LC DefList RC .

    $default  reduce using rule 12 (StructSpecifier)


state 46

   42 DefList: Def DefList .

    $default  reduce using rule 42 (DefList)


state 47

   18 VarDec: VarDec . LB INT RB
   19       | VarDec . LB error SEMI
   25 ParamDec: Specifier VarDec .

    LB  shift, and go to state 26

    $default  reduce using rule 25 (ParamDec)


state 48

   20 FunDec: ID LP VarList RP .

    $default  reduce using rule 20 (FunDec)


state 49

   23 VarList: ParamDec COMMA . VarList

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    Specifier        go to state 33
    StructSpecifier  go to state 8
    VarList          go to state 70
    ParamDec         go to state 35


state 50

   19 VarDec: VarDec LB error SEMI .

    $default  reduce using rule 19 (VarDec)


state 51

   18 VarDec: VarDec LB INT RB .

    $default  reduce using rule 18 (VarDec)


state 52

   27 CompSt: LC DefList error . RC
   41 Stmt: error . SEMI

    SEMI  shift, and go to state 71
    RC    shift, and go to state 72


state 53

   66 Exp: INT .

    $default  reduce using rule 66 (Exp)


state 54

   67 Exp: FLOAT .

    $default  reduce using rule 67 (Exp)


state 55

   40 Stmt: ID . LP error SEMI
   61 Exp: ID . LP Args RP
   62    | ID . LP RP
   65    | ID .

    LP  shift, and go to state 73

    $default  reduce using rule 65 (Exp)


state 56

   59 Exp: MINUS . Exp

    INT    shift, and go to state 53
    FLOAT  shift, and go to state 54
    ID     shift, and go to state 74
    MINUS  shift, and go to state 56
    NOT    shift, and go to state 57
    LP     shift, and go to state 75

    Exp  go to state 76


state 57

   60 Exp: NOT . Exp

    INT    shift, and go to state 53
    FLOAT  shift, and go to state 54
    ID     shift, and go to state 74
    MINUS  shift, and go to state 56
    NOT    shift, and go to state 57
    LP     shift, and go to state 75

    Exp  go to state 77


state 58

   39 Stmt: LP . Exp error SEMI
   58 Exp: LP . Exp RP

    INT    shift, and go to state 53
    FLOAT  shift, and go to state 54
    ID     shift, and go to state 74
    MINUS  shift, and go to state 56
    NOT    shift, and go to state 57
    LP     shift, and go to state 75

    Exp  go to state 78


state 59

   32 Stmt: RETURN . Exp SEMI

    INT    shift, and go to state 53
    FLOAT  shift, and go to state 54
    ID     shift, and go to state 74
    MINUS  shift, and go to state 56
    NOT    shift, and go to state 57
    LP     shift, and go to state 75

    Exp  go to state 79


state 60

   33 Stmt: IF . LP Exp RP Stmt
   34     | IF . LP Exp RP Stmt ELSE Stmt
   35     | IF . LP Exp RP error ELSE Stmt
   38     | IF . LP error SEMI

    LP  shift, and go to state 80


state 61

   36 Stmt: WHILE . LP Exp RP Stmt

    LP  shift, and go to state 81


state 62

   31 Stmt: CompSt .

    $default  reduce using rule 31 (Stmt)


state 63

   26 CompSt: LC DefList StmtList . RC

    RC  shift, and go to state 82


state 64

   28 StmtList: Stmt . StmtList

    error   shift, and go to state 83
    INT     shift, and go to state 53
    FLOAT   shift, and go to state 54
    ID      shift, and go to state 55
    MINUS   shift, and go to state 56
    NOT     shift, and go to state 57
    LP      shift, and go to state 58
    LC      shift, and go to state 27
    RETURN  shift, and go to state 59
    IF      shift, and go to state 60
    WHILE   shift, and go to state 61

    RC  reduce using rule 29 (StmtList)

    CompSt    go to state 62
    StmtList  go to state 84
    Stmt      go to state 64
    Exp       go to state 65


state 65

   30 Stmt: Exp . SEMI
   37     | Exp . LB error SEMI
   50 Exp: Exp . ASSIGNOP Exp
   51    | Exp . AND Exp
   52    | Exp . OR Exp
   53    | Exp . RELOP Exp
   54    | Exp . PLUS Exp
   55    | Exp . MINUS Exp
   56    | Exp . STAR Exp
   57    | Exp . DIV Exp
   63    | Exp . LB Exp RB
   64    | Exp . DOT ID

    SEMI      shift, and go to state 85
    ASSIGNOP  shift, and go to state 86
    RELOP     shift, and go to state 87
    PLUS      shift, and go to state 88
    MINUS     shift, and go to state 89
    STAR      shift, and go to state 90
    DIV       shift, and go to state 91
    AND       shift, and go to state 92
    OR        shift, and go to state 93
    DOT       shift, and go to state 94
    LB        shift, and go to state 95


state 66

   45 Def: Specifier error SEMI .

    $default  reduce using rule 45 (Def)


state 67

   49 Dec: VarDec ASSIGNOP . Exp

    INT    shift, and go to state 53
    FLOAT  shift, and go to state 54
    ID     shift, and go to state 74
    MINUS  shift, and go to state 56
    NOT    shift, and go to state 57
    LP     shift, and go to state 75

    Exp  go to state 96


state 68

   44 Def: Specifier DecList SEMI .

    $default  reduce using rule 44 (Def)


state 69

   47 DecList: Dec COMMA . DecList

    ID  shift, and go to state 36

    VarDec   go to state 42
    DecList  go to state 97
    Dec      go to state 44


state 70

   23 VarList: ParamDec COMMA VarList .

    $default  reduce using rule 23 (VarList)


state 71

   41 Stmt: error SEMI .

    $default  reduce using rule 41 (Stmt)


state 72

   27 CompSt: LC DefList error RC .

    $default  reduce using rule 27 (CompSt)


state 73

   40 Stmt: ID LP . error SEMI
   61 Exp: ID LP . Args RP
   62    | ID LP . RP

    error  shift, and go to state 98
    INT    shift, and go to state 53
    FLOAT  shift, and go to state 54
    ID     shift, and go to state 74
    MINUS  shift, and go to state 56
    NOT    shift, and go to state 57
    LP     shift, and go to state 75
    RP     shift, and go to state 99

    Exp   go to state 100
    Args  go to state 101


state 74

   61 Exp: ID . LP Args RP
   62    | ID . LP RP
   65    | ID .

    LP  shift, and go to state 102

    $default  reduce using rule 65 (Exp)


state 75

   58 Exp: LP . Exp RP

    INT    shift, and go to state 53
    FLOAT  shift, and go to state 54
    ID     shift, and go to state 74
    MINUS  shift, and go to state 56
    NOT    shift, and go to state 57
    LP     shift, and go to state 75

    Exp  go to state 103


state 76

   50 Exp: Exp . ASSIGNOP Exp
   51    | Exp . AND Exp
   52    | Exp . OR Exp
   53    | Exp . RELOP Exp
   54    | Exp . PLUS Exp
   55    | Exp . MINUS Exp
   56    | Exp . STAR Exp
   57    | Exp . DIV Exp
   59    | MINUS Exp .
   63    | Exp . LB Exp RB
   64    | Exp . DOT ID

    STAR  shift, and go to state 90
    DIV   shift, and go to state 91
    DOT   shift, and go to state 94
    LB    shift, and go to state 104

    $default  reduce using rule 59 (Exp)


state 77

   50 Exp: Exp . ASSIGNOP Exp
   51    | Exp . AND Exp
   52    | Exp . OR Exp
   53    | Exp . RELOP Exp
   54    | Exp . PLUS Exp
   55    | Exp . MINUS Exp
   56    | Exp . STAR Exp
   57    | Exp . DIV Exp
   60    | NOT Exp .
   63    | Exp . LB Exp RB
   64    | Exp . DOT ID

    DOT  shift, and go to state 94
    LB   shift, and go to state 104

    $default  reduce using rule 60 (Exp)


state 78

   39 Stmt: LP Exp . error SEMI
   50 Exp: Exp . ASSIGNOP Exp
   51    | Exp . AND Exp
   52    | Exp . OR Exp
   53    | Exp . RELOP Exp
   54    | Exp . PLUS Exp
   55    | Exp . MINUS Exp
   56    | Exp . STAR Exp
   57    | Exp . DIV Exp
   58    | LP Exp . RP
   63    | Exp . LB Exp RB
   64    | Exp . DOT ID

    error     shift, and go to state 105
    ASSIGNOP  shift, and go to state 86
    RELOP     shift, and go to state 87
    PLUS      shift, and go to state 88
    MINUS     shift, and go to state 89
    STAR      shift, and go to state 90
    DIV       shift, and go to state 91
    AND       shift, and go to state 92
    OR        shift, and go to state 93
    DOT       shift, and go to state 94
    RP        shift, and go to state 106
    LB        shift, and go to state 104


state 79

   32 Stmt: RETURN Exp . SEMI
   50 Exp: Exp . ASSIGNOP Exp
   51    | Exp . AND Exp
   52    | Exp . OR Exp
   53    | Exp . RELOP Exp
   54    | Exp . PLUS Exp
   55    | Exp . MINUS Exp
   56    | Exp . STAR Exp
   57    | Exp . DIV Exp
   63    | Exp . LB Exp RB
   64    | Exp . DOT ID

    SEMI      shift, and go to state 107
    ASSIGNOP  shift, and go to state 86
    RELOP     shift, and go to state 87
    PLUS      shift, and go to state 88
    MINUS     shift, and go to state 89
    STAR      shift, and go to state 90
    DIV       shift, and go to state 91
    AND       shift, and go to state 92
    OR        shift, and go to state 93
    DOT       shift, and go to state 94
    LB        shift, and go to state 104


state 80

   33 Stmt: IF LP . Exp RP Stmt
   34     | IF LP . Exp RP Stmt ELSE Stmt
   35     | IF LP . Exp RP error ELSE Stmt
   38     | IF LP . error SEMI

    error  shift, and go to state 108
    INT    shift, and go to state 53
    FLOAT  shift, and go to state 54
    ID     shift, and go to state 74
    MINUS  shift, and go to state 56
    NOT    shift, and go to state 57
    LP     shift, and go to state 75

    Exp  go to state 109


state 81

   36 Stmt: WHILE LP . Exp RP Stmt

    INT    shift, and go to state 53
    FLOAT  shift, and go to state 54
    ID     shift, and go to state 74
    MINUS  shift, and go to state 56
    NOT    shift, and go to state 57
    LP     shift, and go to state 75

    Exp  go to state 110


state 82

   26 CompSt: LC DefList StmtList RC .

    $default  reduce using rule 26 (CompSt)


state 83

   41 Stmt: error . SEMI

    SEMI  shift, and go to state 71


state 84

   28 StmtList: Stmt StmtList .

    $default  reduce using rule 28 (StmtList)


state 85

   30 Stmt: Exp SEMI .

    $default  reduce using rule 30 (Stmt)


state 86

   50 Exp: Exp ASSIGNOP . Exp

    INT    shift, and go to state 53
    FLOAT  shift, and go to state 54
    ID     shift, and go to state 74
    MINUS  shift, and go to state 56
    NOT    shift, and go to state 57
    LP     shift, and go to state 75

    Exp  go to state 111


state 87

   53 Exp: Exp RELOP . Exp

    INT    shift, and go to state 53
    FLOAT  shift, and go to state 54
    ID     shift, and go to state 74
    MINUS  shift, and go to state 56
    NOT    shift, and go to state 57
    LP     shift, and go to state 75

    Exp  go to state 112


state 88

   54 Exp: Exp PLUS . Exp

    INT    shift, and go to state 53
    FLOAT  shift, and go to state 54
    ID     shift, and go to state 74
    MINUS  shift, and go to state 56
    NOT    shift, and go to state 57
    LP     shift, and go to state 75

    Exp  go to state 113


state 89

   55 Exp: Exp MINUS . Exp

    INT    shift, and go to state 53
    FLOAT  shift, and go to state 54
    ID     shift, and go to state 74
    MINUS  shift, and go to state 56
    NOT    shift, and go to state 57
    LP     shift, and go to state 75

    Exp  go to state 114


state 90

   56 Exp: Exp STAR . Exp

    INT    shift, and go to state 53
    FLOAT  shift, and go to state 54
    ID     shift, and go to state 74
    MINUS  shift, and go to state 56
    NOT    shift, and go to state 57
    LP     shift, and go to state 75

    Exp  go to state 115


state 91

   57 Exp: Exp DIV . Exp

    INT    shift, and go to state 53
    FLOAT  shift, and go to state 54
    ID     shift, and go to state 74
    MINUS  shift, and go to state 56
    NOT    shift, and go to state 57
    LP     shift, and go to state 75

    Exp  go to state 116


state 92

   51 Exp: Exp AND . Exp
